tweaks to slider limits

--- a/Assignment2DLA.ipynb
+++ b/Assignment2DLA.ipynb
@@ -35,17 +35,17 @@
     "\n",
     "# use display.display to show every step of progress. Gets slow fast\n",
     "animate_progress = False # @param {type:\"boolean\"}\n",
-    "# save animation of \n",
+    "# save animation after the fact, faster than live animation but takes a bit to process\n",
     "save_animation = False # @param {type:\"boolean\"}\n",
     "\n",
     "# Length of one side of the grid\n",
-    "S = 100 # @param {type:\"slider\", min:5, max:111, step:1}\n",
+    "S = 100 # @param {type:\"slider\", min:5, max:200, step:1}\n",
     "\n",
     "# World grid\n",
     "world = []\n",
     "\n",
     "# aggregate size to stop at\n",
-    "T = 500 # @param {type:\"slider\", min:5, max:111, step:1}\n",
+    "T = 500 # @param {type:\"slider\", min:10, max:1000, step:1}\n",
     "\n",
     "# Number of active walkers to maintain\n",
     "W = 50 # @param {type:\"slider\", min:1, max:100, step:1}\n",
