--- a/Assignment2CellularAutomata.ipynb
+++ b/Assignment2CellularAutomata.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## **Assignment #2**\n",
+        "## **Assignment #2: CA mini-project code**\n",
         "Carina Manitius, Trevor Webster, Derek Devine, Nate Borland"
       ]
     },
@@ -604,7 +604,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
