--- a/Assignment2DLA.ipynb
+++ b/Assignment2DLA.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **Assignment #2**\n",
+    "Carina Manitius, Trevor Webster, Derek Devine, Nate Borland"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Q1 - Research Question"
    ]
   },
