--- a/Assignment2DLA.ipynb
+++ b/Assignment2DLA.ipynb
@@ -24,7 +24,7 @@
     "In this study, we examined the effects of three different zoning regulation approaches on greenspace patterns in cities experiencing urban sprawl.\n",
     "- **Scenario 1: increased regulation** - Zoning laws restrict, rather than prohibit, further urbanization in heavily urbanized neighborhoods, making additional urbanization less likely. This could involve higher permit costs or more stringent approval processes, such as stricter environmental impact assessments.\n",
     "- **Scenario 2: strict caps** - Zoning laws entirely ban additional urbanization in neighborhoods that have surpassed a certain threshold of urbanization.\n",
-    "- **Scenario 3: strict caps with rnadom growth** - Similar to Scenario 2, but allows for random urbanization around the city’s core, though at a low probability.\n",
+    "- **Scenario 3: strict caps with random growth** - Similar to Scenario 2, but allows for random urbanization around the city’s core, though at a low probability.\n",
     "\n",
     "To evaluate how each scenario affects greenspace, we compared their performance across several key measures. Greenspace in cities can be quantified in various ways, but typical metrics focus on how much greenspace exists and how evenly it is distributed, as both are crucial for ensuring residents’ access to nature. We used four metrics to assess the final greenspace patterns under each scenario:\n",
     "1. **Greenspace share** - the percent of the city covered by greenspace.\n",
@@ -59,7 +59,7 @@
    "source": [
     "**Overview**\n",
     "\n",
-    "To simulate how zoning regulations impact urban sprawl and greenspace patterns, we built a cellular automaton model. The model represents an expanding city and the transformation of nature into urban areas over time. We simulate this process by defining states for cells, setting initial conditions, and establishing rules for how urbanization occurs. Zoning laws are modeled as chnages to those rulesets based on how the zoning scenario is defined. Below, we break down the key elements of the model, followed by the model code.\n",
+    "To simulate how zoning regulations impact urban sprawl and greenspace patterns, we built a cellular automaton model. The model represents an expanding city and the transformation of nature into urban areas over time. We simulate this process by defining states for cells, setting initial conditions, and establishing rules for how urbanization occurs. Zoning laws are modeled as changes to those rulesets based on how the zoning scenario is defined. Below, we break down the key elements of the model, followed by the model code.\n",
     "\n",
     "**States and Grid Setup**\n",
     "\n",
@@ -85,7 +85,7 @@
     "At each timestep, the states of all cells update synchronously based on the following rules:\n",
     "\n",
     "- Urban cells: Once a cell becomes urban, it remains urban permanently.\n",
-    "- Nature cells: Nature cells urbanize stochastically, with the probability of urbanization ($P_N$) determined by the number of neighboring urban cells in the previous timestep. For our simulation, we use a 5x5 extended Moore neighborhood, meaning that the probability that a cell urbanizes is affected by how many urban neighbors are within 2 steps (proximity) away from that cell.\n",
+    "- Nature cells: Nature cells urbanize stochastically, with the probability of urbanization ($P_N$) determined by the number of neighboring urban cells in the previous timestep. For our simulation, we use a 5x5 extended Moore neighborhood, meaning that the probability that a cell urbanizes is affected by how many urban neighbors are within 2 steps (proximity) away from that cell (also called the Chebyshev distance).\n",
     "\n",
     "The probability that a nature cell urbanizes ($P_N$) is based on how many urban cells surround it. Without zoning regulations, these probabilities follow a gradient:\n",
     "\n",
@@ -93,6 +93,10 @@
     "- P₁: Probability of urbanization with one urban neighbor.\n",
     "- P₂: Probability of urbanization with two urban neighbors.\n",
     "- And so on, until P_MAX, the maximum probability.\n",
+    "\n",
+    "Without outside intervention (i.e. with no zoning laws), we assume that $P_0 < P_1 < P_2 < P_3 < ...$ This represents a zoning-free environment where increasing population density leads to increasing demand for land and thus an increased probability of urbanization.\n",
+    "\n",
+    "P_2 is higher than P_1, P_3 higher than P_2, etc, to represent exponentially increasing population and land use demand (maybe you know a better term than \"land use demand\"?)\n",
     "\n",
     "Our model allows users to set the $P_N$ values using sliders. Zoning laws are introduced by adjusting $P_N$ to represent different levels of regulation. Different combinations of values for $P_N$ simulate varying degrees of restriction or allowance of urbanization. The specific rulesets used for each scenario are shown in the results in Question 4."
    ]
